Continuation of project.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>SFFPC BLDR.</title>
+    <title>Home - SFFPC BLDR.</title>
   </head>
 
   <body>
@@ -30,7 +30,7 @@
     <!-- Header (END) -->
 
     <div id="nav-bounds">
-      <div id="main-image"></div>
+      <div id="main-image" class="center-image"></div>
 
       <main>
         <!-- About (START) -->
@@ -124,7 +124,7 @@
           <div id="builds-grid">
             <div class="body" id="aqua">
               <h3 class="builds-grid-heading">Aqua</h3>
-              <h3 class="builds-grid-subheading">Tier 4 - $600+</h3>
+              <h3 class="builds-grid-subheading">Tier 4 - $850+</h3>
               <img
                 class="builds-icons"
                 src="SVGs/PC_Aqua.svg"
@@ -145,21 +145,21 @@
                   </div>
                   <div class="specs-line storage">
                     <span class="spec-heading">Storage:</span>
-                    <p><span class="aqua hide-text">NVME SSD - </span>500 GB</p>
+                    <p><span class="aqua hide-text">NVME SSD - </span>1 TB</p>
                   </div>
                   <div class="specs-line gpu">
                     <span class="spec-heading">GPU:</span>
                     <p>
-                      <span class="aqua hide-text">Radeon </span>RX 6600 8GB
+                      <span class="aqua hide-text">Radeon </span>RX 6600
                     </p>
                   </div>
                 </div>
               </div>
-              <button class="configure">Configure</button>
+              <a href="config_aqua.html" class="configure">Configure</a>
             </div>
             <div class="body" id="terra">
               <h3 class="builds-grid-heading">Terra</h3>
-              <h3 class="builds-grid-subheading">Tier 3 - $900+</h3>
+              <h3 class="builds-grid-subheading">Tier 3 - $1,200+</h3>
               <img
                 class="builds-icons"
                 src="SVGs/PC_Terra.svg"
@@ -171,12 +171,12 @@
                   <div class="specs-line cpu">
                     <span class="spec-heading">CPU:</span>
                     <p>
-                      <span class="terra hide-text">AMD </span>Ryzen 5 5600X
+                      <span class="terra hide-text">AMD </span>Ryzen 5 7600X
                     </p>
                   </div>
                   <div class="specs-line ram">
                     <span class="spec-heading">RAM:</span>
-                    <p>16GB DDR4</p>
+                    <p>16GB DDR5</p>
                   </div>
                   <div class="specs-line storage">
                     <span class="spec-heading">Storage:</span>
@@ -186,16 +186,15 @@
                     <span class="spec-heading">GPU:</span>
                     <p>
                       <span class="terra hide-text">Radeon </span>RX 6700 XT
-                      12GB
                     </p>
                   </div>
                 </div>
               </div>
-              <button class="configure">Configure</button>
+              <a href="" class="configure">Configure</a>
             </div>
             <div class="body" id="fuoco">
               <h3 class="builds-grid-heading">Fuoco</h3>
-              <h3 class="builds-grid-subheading">Tier 2 - $1,600+</h3>
+              <h3 class="builds-grid-subheading">Tier 2 - $1,700+</h3>
               <img
                 class="builds-icons"
                 src="SVGs/PC_Fuoco.svg"
@@ -207,12 +206,12 @@
                   <div class="specs-line cpu">
                     <span class="spec-heading">CPU:</span>
                     <p>
-                      <span class="fuoco hide-text">AMD </span>Ryzen 7 3800X3D
+                      <span class="fuoco hide-text">Intel Core </span>i7-13700K
                     </p>
                   </div>
                   <div class="specs-line ram">
                     <span class="spec-heading">RAM:</span>
-                    <p>32GB DDR4</p>
+                    <p>32GB DDR5</p>
                   </div>
                   <div class="specs-line storage">
                     <span class="spec-heading">Storage:</span>
@@ -221,21 +220,20 @@
                   <div class="specs-line gpu">
                     <span class="spec-heading">GPU:</span>
                     <p>
-                      <span class="fuoco hide-text">Radeon </span>RX 7900 XT
-                      20GB
+                      <span class="fuoco hide-text">Radeon </span>RX 7700 XT
                     </p>
                   </div>
                 </div>
               </div>
-              <button class="configure">Configure</button>
+              <a href="" class="configure">Configure</a>
             </div>
-            <div class="body" id="glassia">
-              <h3 class="builds-grid-heading">Glassia</h3>
-              <h3 class="builds-grid-subheading">Tier 1 - $2,000+</h3>
+            <div class="body" id="galassia">
+              <h3 class="builds-grid-heading">Galassia</h3>
+              <h3 class="builds-grid-subheading">Tier 1 - $2,570+</h3>
               <img
                 class="builds-icons"
-                src="SVGs/PC_Glassia.svg"
-                alt="Glassia PC icon."
+                src="SVGs/PC_Galassia.svg"
+                alt="Galassia PC icon."
               />
               <div class="specs">
                 <h3 class="specs-heading">Specs.</h3>
@@ -243,30 +241,29 @@
                   <div class="specs-line cpu">
                     <span class="spec-heading">CPU:</span>
                     <p>
-                      <span class="glassia hide-text">Intel Core </span
-                      >i7-13700K
+                      <span class="galassia hide-text">Intel Core </span
+                      >i9-13900K
                     </p>
                   </div>
                   <div class="specs-line ram">
                     <span class="spec-heading">RAM:</span>
-                    <p>32GB DDR4</p>
+                    <p>32GB DDR5</p>
                   </div>
                   <div class="specs-line storage">
                     <span class="spec-heading">Storage:</span>
                     <p>
-                      <span class="glassia hide-text">NVME SSD - </span>2 TB
+                      <span class="galassia hide-text">NVME SSD - </span>2 TB
                     </p>
                   </div>
                   <div class="specs-line gpu">
                     <span class="spec-heading">GPU:</span>
                     <p>
-                      <span class="glassia hide-text">GeForce </span>RTX 4070 Ti
-                      12GB
+                      <span class="galassia hide-text">Radeon </span>RX 7900 XTX
                     </p>
                   </div>
                 </div>
               </div>
-              <button class="configure">Configure</button>
+              <a href="" class="configure">Configure</a>
             </div>
           </div>
         </section>
